# TableTalk

./: docker-compose.yml
ai_workflow/: __init__.py
ai_workflow/agents/: audit.py
ai_workflow/prompts/: __init__.py  audit_prompts.py  response_prompts.py
ai_workflow/schemas/: response.py
backend/: .gitignore  Dockerfile  check_insights.py  local_db_fallback.json  main.py  pyproject.toml  task.md  wipe_insights.py
backend/ai_workflow/: __init__.py  config.py
backend/ai_workflow/agents/: __init__.py  analysis.py  audit.py  extractor.py  response.py  triage.py
backend/ai_workflow/prompts/: analysis_prompts.py  audit_prompts.py  response_prompts.py  triage_prompts.py
backend/ai_workflow/schemas/: __init__.py  analysis.py  audit.py  extractor.py  scraper.py  triage.py
backend/ai_workflow/services/: __init__.py  cache_service.py  embedding_service.py  llm_service.py  vector_service.py
backend/app/: cron.py  database.py  main.py  tasks.py  worker.py
backend/app/core/: __init__.py  auth.py  config.py  logging.py  middleware.py  utils.py
backend/app/models/: __init__.py  business.py  campaign.py  coupon.py  customer.py  insight.py  restaurant.py  review.py
backend/app/routes/: campaigns.py  dashboard.py  insights.py  onboard.py  reviews.py  search.py
backend/app/schemas/: __init__.py  campaign.py  onboard.py  review.py
backend/tests/: conftest.py  test_agents.py  test_routes.py
client/: jest.config.js  package-lock.json  package.json
client/src/: middleware.ts
client/src/__tests__/: utils.test.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: AgentLoop.tsx  ErrorBoundary.tsx  FaqAccordion.tsx  FeatureGrowth.tsx  FeatureInsights.tsx  Footer.tsx  FormInput.tsx  Header.tsx  HeroSection.tsx  (+4 more)
(+40 files in other folders)
