[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.17.0",
    "python-multipart>=0.0.29",
    "redis>=8.0.0",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.48.0",
]
